--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.1,<2.3-dev",
-        "symfony/security-bundle": ">=2.1,<2.3-dev"
+        "symfony/framework-bundle": ">=2.0,<2.3-dev",
+        "knplabs/knp-paginator-bundle": "dev-master"
     },
     "require-dev": {
         "symfony/framework-bundle": ">=2.1,<2.3-dev",
