--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "lexik/monolog-browser-bundle",
     "type": "symfony-bundle",
-    "description": "",
+    "description": "This Symfony2 bundle provides a Doctrine DBAL handler for Monolog and a web UI to display log entries",
     "keywords": ["Symfony2", "bundle", "monolog", "logger", "doctrine"],
     "homepage": "https://github.com/lexik/LexikMonologBrowserBundle",
     "license": "MIT",
