--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,10 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.0,<2.3-dev",
-        "knplabs/knp-paginator-bundle": "dev-master"
+        "symfony/framework-bundle": ">=2.1,<2.3-dev",
+        "knplabs/knp-paginator-bundle": ">=2.3,dev-master"
     },
     "require-dev": {
-        "symfony/framework-bundle": ">=2.1,<2.3-dev",
         "monolog/monolog": "*",
         "doctrine/dbal": "*"
     },
